Update and rename chat.html to index.html

--- a/index.html
+++ b/index.html
@@ -13,15 +13,15 @@
 
         <body id="body">
         <p id="buttons">
-        <a href="file:///C:/Users/Administrator/Desktop/과제/HTML/캡스톤/로그인.html">
+        <a href="https://p0322.github.io/login/">
         <input type="button" value="로그인" >
         </a>
 
-        <a href="file:///C:/Users/Administrator/Desktop/과제/HTML/캡스톤/회원가입.html">
+        <a href="https://p0322.github.io/new/">
         <input type="button" value="회원가입">
         </a>
 
-        <a href="file:///C:/Users/Administrator/Desktop/과제/HTML/캡스톤/문의.html">
+        <a href="https://p0322.github.io/cos/">
         <input type="button" value="고객센터">
         </a>
 
@@ -57,12 +57,16 @@
    <footer>
       <p>COPYRIGHT(C) 코인법률방(Coin law room) All Rights Reserved
 
-      <img src="카카오톡.png" width="50" height="50" onclick="alert('(SNS 문의) e카카오톡 아이디 : lhj7681')"</a>
-      <a href="http://facebook.com" target="_blank"><img src="페이스북.png" width="50" height="50" ></a>
-      <a href="http://twitter.com" target="_blank"><img src="트위터.png" width="50" height="50"></a>
-      <a href="http://instagram.com" target="_blank"><img src="인스타그램.png" width="50" height="50"></a>
-      <img src="라인.png" width="50" height="50" onclick="alert('(SNS 문의) 라인 아이디 : 없음')"></a>
-      <img src="SNS.png" width="50" height="50"></p>
+      <img src=kakaotalk.png width="50" height="50" align="right" onclick="alert('(SNS 문의) e카카오톡 아이디 : lhj7681')">
+       <a href="http://facebook.com" target="_blank">
+         <img src="face.png" width="50" height="50" align="right"></a>
+       <a href="http://twitter.com" target="_blank">
+         <img src="twitter.png" width="50" height="50"align="right"></a>
+       <a href="http://instagram.com" target="_blank">
+         <img src="instar.png" width="50" height="50" align="right"></a>
+       <img src="line.png" width="50" height="50" align="right" onclick="alert('(SNS 문의) 라인 아이디 : 없음')">
+       <img src="SNS.png" width="50" height="50" align="right">
+
 
    </footer>
 </html>
