--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 </head>
 
 <body>
-  <a href="file:///C:/Users/Administrator/Desktop/과제/HTML/캡스톤/홈페이지.html">
+  <a href="file:///C:\Users\pby03\Downloads\f74436f1a6db7847/home.html">
     <img src="피카츄로고.png" width="230" height="85" id="css_fixed"></a><br/>
     <form id="form" action="action.jsp"><hr>
 
