--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 
 <body>
   <a href="file:///C:\Users\pby03\Downloads\f74436f1a6db7847/home.html">
-    <img src="피카츄로고.png" width="230" height="85" id="css_fixed"></a><br/>
+    <img src="pr.png" width="230" height="85" id="css_fixed"></a><br/>
     <form id="form" action="action.jsp"><hr>
 
         <body id="body">
